QA fixes to home and join band

--- a/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
@@ -8,19 +8,19 @@ img, media {
 
 @font-face {
   font-family: 'TradeGothicLTStd';
-  src: url(/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd.otf); }
+  src: url("/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd.otf"); }
 
 @font-face {
   font-family: 'TradeGothicLTStd-Bd2';
-  src: url(/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd-Bd2.otf); }
+  src: url("/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd-Bd2.otf"); }
 
 @font-face {
   font-family: 'TradeGothicLTStd-BdCn20';
-  src: url(/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd-BdCn20.otf); }
+  src: url("/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd-BdCn20.otf"); }
 
 @font-face {
   font-family: 'TradeGothicLTStd-Cn18';
-  src: url(/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd-Cn18.otf); }
+  src: url("/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd-Cn18.otf"); }
 
 /* base default styles */
 html body {
@@ -194,10 +194,14 @@ body {
   background: url("/sites/all/themes/unc_charlotte4/img/header-bg.png") repeat-x scroll center top white; }
   #header-wrapper .container {
     margin: auto;
-    max-width: 1200px;
-    padding: 0 10px; }
+    max-width: 1200px; }
     #header-wrapper .container #header-row {
-      background: url("/sites/all/themes/unc_charlotte4/img/header-logo-watermark.png") repeat-x scroll center center white;
+      background: url("/sites/all/themes/unc_charlotte4/img/header-logo-watermark.png") no-repeat 48% 62%;
+      background-size: 1230px 165px;
+      height: 94px;
+      padding: 0 10px;
+      background: url("/sites/all/themes/unc_charlotte4/img/header-logo-watermark.png") no-repeat 0 0;
+      background-size: auto;
       height: 100px; }
       #header-wrapper .container #header-row #logo-wrapper {
         width: 30%;
@@ -219,20 +223,23 @@ body {
         width: 50%; }
         #header-wrapper .container #header-row #branding #site-name-wrapper #site-name {
           text-align: left;
-          top: 25px;
+          top: 30px;
           position: relative;
           display: block;
           float: left;
           color: white;
-          font-family: times,"times new roman",serif; }
+          font-family: times,"times new roman",serif;
+          top: 38px; }
           #header-wrapper .container #header-row #branding #site-name-wrapper #site-name a {
             color: white;
             text-decoration: none; }
             #header-wrapper .container #header-row #branding #site-name-wrapper #site-name a:hover {
               text-decoration: underline; }
           #header-wrapper .container #header-row #branding #site-name-wrapper #site-name .site-title {
-            line-height: 24px;
-            font-size: 18px; }
+            line-height: 20px;
+            font-size: 19px;
+            font-size: 21px;
+            font-weight: 600; }
         #header-wrapper .container #header-row #branding #site-name-wrapper #site-name-title {
           font-size: 1em;
           margin: 0;
@@ -623,7 +630,8 @@ body .field-collection-container {
         float: left;
         width: 100%;
         width: calc(100% - 30px);
-        margin: 0; }
+        margin: 0;
+        font-weight: 600; }
     .block.block--bean .bean-faq .content .field--name-field-question .field__item .entity-field-collection-item .field--name-field-answer {
       font-family: arial;
       color: #444;
@@ -673,17 +681,17 @@ body .field-collection-container {
       color: #444;
       font-size: 32px;
       line-height: 32px;
+      line-height: 42px;
       padding: 0 10px;
       text-align: center;
       position: relative;
       top: -64px;
       background: #eee;
-      width: auto;
+      width: 220px;
+      margin: auto;
       width: 400px;
       font-size: 42px;
-      line-height: 42px;
-      background: white;
-      margin: auto; }
+      background: white; }
     .block.block--bean .bean-showcase .showcase-intro {
       font-family: arial;
       color: #444;
@@ -984,6 +992,7 @@ body .field-collection-container {
         border: 1px solid #ccc;
         margin-bottom: 2px;
         cursor: pointer;
+        text-transform: initial;
         display: none; }
         .block.block--bean .bean-text-and-links-promo .list-links h2.block__title:before {
           content: "\f0c9";
@@ -1453,6 +1462,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
           text-decoration: underline; }
 
 #block-bean-facilities-showcase {
+  background: white;
   background: url("/sites/all/themes/unc_charlotte4/img/stadium_blur.jpg") no-repeat center bottom;
   background-size: cover; }
   #block-bean-facilities-showcase .block__content {
@@ -1460,7 +1470,6 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     padding: 0 10px;
     margin: auto; }
     #block-bean-facilities-showcase .block__content .content h2 {
-      background: #eee;
       background: white; }
 
 /* end homepage - specific elements */
@@ -1476,11 +1485,9 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     #block-bean-join-the-band-introduction.block.block--bean .bean-text-and-links-promo .promo-image {
       padding: 0;
       width: 100%;
-      max-width: initial;
-      border: none; }
+      max-width: initial; }
       #block-bean-join-the-band-introduction.block.block--bean .bean-text-and-links-promo .promo-image img {
-        width: 100%;
-        border: 1px solid #ccc; }
+        width: 100%; }
     #block-bean-join-the-band-introduction.block.block--bean .bean-text-and-links-promo .promo-content-container {
       width: 100%;
       max-width: initial;
@@ -1494,7 +1501,8 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
           display: block;
           float: left;
           width: 100%;
-          width: auto; }
+          width: auto;
+          max-width: 250px; }
           #block-bean-join-the-band-introduction.block.block--bean .bean-text-and-links-promo .promo-content-container .field--name-field-list-of-links .field__items .field__item a {
             font-family: arial;
             color: #444;
@@ -1532,11 +1540,13 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     background: #fff;
     text-align: center;
     margin: auto;
-    width: auto;
-    width: 500px;
+    width: 60%;
+    min-width: 200px;
+    width: 275px;
     max-width: 100%;
     font-size: 48px;
     line-height: 48px;
+    width: 500px;
     float: none;
     position: relative;
     top: 12px; }
@@ -1622,6 +1632,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
               color: #444;
               font-size: 16px;
               line-height: 16px;
+              display: inline-block;
               position: relative;
               padding: 10px; }
               #block-bean-band-camp.block.block--bean .bean-text-and-links-promo .promo-content-container .field--name-field-intro-text .field__items .field__item div:after {
@@ -1634,7 +1645,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
                 right: 5px;
                 color: #00703c;
                 top: calc(50% - 8px);
-                right: initial;
+                right: -7px;
                 color: white; }
               #block-bean-band-camp.block.block--bean .bean-text-and-links-promo .promo-content-container .field--name-field-intro-text .field__items .field__item div a {
                 color: white;
@@ -2053,8 +2064,9 @@ html body div.jp-audio {
           padding: 0;
           height: 0px;
           overflow: hidden;
-          margin: 0 10px;
+          margin: 0;
           height: auto;
+          margin: 0 10px;
           -webkit-transition: all 1s;
           transition: all 1s; }
           .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li {
@@ -2083,10 +2095,12 @@ html body div.jp-audio {
               height: 60px;
               display: block;
               line-height: 60px;
-              font-size: 14px;
-              padding: 0 13px;
-              font-size: 19px;
-              padding: 0 25px; }
+              padding: 0 9px;
+              font-size: 16px;
+              padding: 0 12px;
+              font-size: 20px;
+              padding: 0 22px;
+              font-size: 22px; }
             .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li:nth-child(1) {
               background: white;
               border-left: 1px solid #d5d5d5;
@@ -2408,6 +2422,42 @@ html body div.jp-audio {
   padding: 5px; }
 
 /* end styling for specific node pages */
+/* search results page */
+body.page-search .l-main ul.breadcrumbs {
+  display: none; }
+body.page-search .l-main h2 {
+  display: block;
+  float: left;
+  width: 100%;
+  margin: 20px 0 15px 0;
+  padding: 10px 10px 10px 0;
+  border-bottom: 1px solid #ddd; }
+body.page-search .l-main a {
+  color: #00703c; }
+body.page-search .l-main form.search-form input#edit-keys {
+  margin: 0 0 10px 0;
+  padding: 0px 5px; }
+body.page-search .l-main form.search-form fieldset.search-advanced {
+  display: inline-block;
+  margin: 25px 0 0 0;
+  padding: 0;
+  border: none; }
+body.page-search .l-main section.search-results {
+  display: block;
+  float: left;
+  width: 100%;
+  padding-bottom: 40px; }
+  body.page-search .l-main section.search-results li.search-result {
+    display: block;
+    float: left;
+    width: 100%;
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd; }
+    body.page-search .l-main section.search-results li.search-result h3 {
+      padding: 10px 10px 10px 0; }
+
+/* end search results page */
+/* footer */
 .l-footer {
   display: block;
   float: left;
