--- a/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
+++ b/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
@@ -162,7 +162,7 @@ body{
 			position:relative;
 			z-index:996;
 			background:#eee;
-			min-height:100vh;
+			//min-height:100vh;
 			.wrapper{
 				display:block;
 				margin:auto;
@@ -704,6 +704,7 @@ body .field-collection-container{
 				color: white;
 				line-height: 42px;
 				text-decoration: none;
+				text-transform: uppercase;
 				padding:0 10px;
 			}
 		}
@@ -715,8 +716,6 @@ body .field-collection-container{
 					@include floatblock();
 					.entity-field-collection-item{
 						.field--name-field-ask-question{
-							
-							
 							.field__item{
 								width:auto;
 								padding:5px;
@@ -1014,6 +1013,9 @@ body .field-collection-container{
 			border-bottom:5px solid #444;
 			padding: 20px 0;
 			margin: -20px 0 10px 0;
+			a:hover .field--name-field-subsection-link {
+				text-decoration: underline;
+			}
 			.field__item{
 				margin-top:20px;
 				.field--name-field-subsection-image{
@@ -1099,7 +1101,7 @@ body .field-collection-container{
 		&.a-right{}
 		.content{
 			h2{
-				@include f-impact(24px);
+				@include f-impact(20px);
 			}
 		}
 		.promo-image{
@@ -1116,7 +1118,7 @@ body .field-collection-container{
 			float:left;
 			width:100%;
 			@include breakpoint($tab,true){
-				padding:10px;
+				padding: 5px 10px 0 10px;
 			}
 			box-sizing:border-box;
 		}
@@ -1160,9 +1162,19 @@ body .field-collection-container{
 					a{
 						@include f-text();
 						@include floatblock();
+						position: relative;
 						text-decoration: none;
-						padding: 5px 10px;
+						padding: 2px 10px 2px 25px;
 						color:$green;
+						&:before {
+							content: '\f054';
+							font-family: FontAwesome;
+							font-size: 8px;
+							padding-left: 10px;
+							position: absolute;
+							color: black;
+							left: 0;
+						}
 					}
 				}
 			}
@@ -1543,11 +1555,9 @@ html #block-views-basic-page-featured-block{
 		background:url("/sites/all/themes/unc_charlotte4/img/0775-1935.png") no-repeat right bottom;
 		max-width:$maxwidth;
 		margin:auto;
-		float:none;
-		min-height:800px;
 	}
 	@include breakpoint($desk,true){
-		min-height:900px;
+		
 	}
 	h2.block__title{
 		display:none;
@@ -1880,6 +1890,24 @@ html #block-views-basic-page-featured-block{
 		position:relative;
 		text-align:center;
 		top:15px;
+	}
+	.content{
+		border-bottom: none;
+		.field__item .field--name-field-subsection-link{
+			font-family: 'TradeGothicLTStd-Cn18', Impact, Arial, sans-serif;;
+			strong {
+				font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
+			}
+		}
+		.field--name-field-subsection-intro {
+			padding: 0 20px;
+		}
+		.field--name-field-promo-read-more .field__item a{
+			position: static;
+			float: right;
+			width: calc(100% - 80px);
+			padding: 0 20px;
+		}
 	}
 }
 /* end join band - specific elements */
@@ -2332,7 +2360,7 @@ html{
 									font-size: 16px;
 								}
 								@include breakpoint($tab-large,true){
-									padding: 0 12px;
+									padding: 0 11px;
 									font-size: 20px;
 								}
 								@include breakpoint($desk,true){
